--- a/MedClin/MedClin.Droid/packages.config
+++ b/MedClin/MedClin.Droid/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="PCLCrypto" version="0.5.0.14108" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
+  <package id="Validation" version="2.0.4.14103" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.DeviceInfo" version="2.0.2" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Media" version="2.6.1" targetFramework="monoandroid60" />
@@ -14,5 +16,6 @@
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Auth" version="1.3.1.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Forms" version="2.3.3.175" targetFramework="monoandroid60" />
 </packages>
