--- a/MedClin/MedClin.Droid/packages.config
+++ b/MedClin/MedClin.Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile" version="0.5.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="monoandroid60" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="monoandroid60" />
   <package id="PCLCrypto" version="0.5.0.14108" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Permissions" version="1.2.1" targetFramework="monoandroid60" />
