--- a/MedClin/MedClin.UWP/project.json
+++ b/MedClin/MedClin.UWP/project.json
@@ -1,5 +1,7 @@
 ﻿{
   "dependencies": {
+    "Microsoft.Azure.Mobile.Analytics": "0.5.0",
+    "Microsoft.Azure.Mobile.Crashes": "0.5.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Xam.Plugin.Connectivity": "2.2.12",
     "Xam.Plugin.DeviceInfo": "2.0.2",
