--- a/MedClin/MedClin.iOS/packages.config
+++ b/MedClin/MedClin.iOS/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile" version="0.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="xamarinios10" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="2.0.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.6.1" targetFramework="xamarinios10" />
