--- a/MedClin/MedClin/packages.config
+++ b/MedClin/MedClin/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile" version="0.5.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Microsoft.Azure.Mobile.Analytics" version="0.5.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Microsoft.Azure.Mobile.Crashes" version="0.5.0" targetFramework="portable45-net45+win8+wpa81" />
   <package id="PCLCrypto" version="0.5.0.14108" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Validation" version="2.0.4.14103" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8+wpa81" />
