--- a/MedClin/MedClin.iOS/MedClin.iOS.csproj
+++ b/MedClin/MedClin.iOS/MedClin.iOS.csproj
@@ -200,6 +200,24 @@
     </Reference>
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\fdoctor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\mdoctor.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\paciente.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\relatorio.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\agenda.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\hamburger.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.3.175\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.3.175\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
